Fixa wsdl funktionaliteten
När man frågar efter en wsdl som skall läsas in automatiskt hittas den inte pga mismatch där sökvägen ibland börjar med "/".
 Dessutom kan wsdl bli felformatterad eftersom man läser in rad för rad och konkatenerar,
vilket gör att radbrytning tas bort och rader slås ihop utan mellanslag.